chore(setting) 파일 구조 디버깅 용 워크플로우 추가

--- a/.github/workflows/auto-assign-pr.yml
+++ b/.github/workflows/auto-assign-pr.yml
@@ -11,6 +11,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Debug file structure
+        run: |
+          ls -la
+          ls -la scripts/
+          cat scripts/assign-reviewer.cjs
+
       - name: Run assign reviewers script
         uses: actions/github-script@v6
         env:
