--- a/.github/workflows/auto-assign-pr.yml
+++ b/.github/workflows/auto-assign-pr.yml
@@ -24,5 +24,5 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const script = require('../../scripts/assign-reviewer.cjs');
+            const script = require('../scripts/assign-reviewer.cjs');
             await script({ github, context, core });
