--- a/.github/workflows/auto-assign-pr.yml
+++ b/.github/workflows/auto-assign-pr.yml
@@ -14,6 +14,8 @@ jobs:
       - name: Debug file structure
         run: |
           ls -la
+          ls -la .github/
+          ls -la .github/scripts
           ls -la scripts/
           cat scripts/assign-reviewer.cjs
 
