--- a/.github/workflows/auto-assign-pr.yml
+++ b/.github/workflows/auto-assign-pr.yml
@@ -11,13 +11,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Debug file structure
-        run: |
-          ls -la
-          ls -la .github/
-          ls -la .github/scripts
-          cat .github/scripts/assign-reviewer.cjs
-
       - name: Run assign reviewers script
         uses: actions/github-script@v6
         env:
@@ -25,5 +18,5 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const script = require('../scripts/assign-reviewer.cjs');
+            const script = require('./scripts/assign-reviewer.cjs');
             await script({ github, context, core });
