chore(setting) 디버그용 폴더 로그 추가

--- a/.github/workflows/auto-review-reminder.yml
+++ b/.github/workflows/auto-review-reminder.yml
@@ -13,6 +13,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Debug folder structure
+        uses: actions/github-script@v7
+        with: 
+          script: |
+            ls -al
+            ls -al .github/
+            ls -al .github/scripts
+
       - name: Send Reminder to Discord
         uses: actions/github-script@v7
         env:
