--- a/.github/workflows/auto-review-reminder.yml
+++ b/.github/workflows/auto-review-reminder.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - develop
   schedule:
-    - cron: "*/5 * * * *" # 매 5분마다
+    - cron: "0 12 * * *" # 매 5분마다
   workflow_dispatch:
 
 jobs:
