--- a/.github/workflows/auto-review-reminder.yml
+++ b/.github/workflows/auto-review-reminder.yml
@@ -11,6 +11,10 @@ on:
 jobs:
   review-reminder:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+      repository-projects: read
 
     steps:
       - name: Checkout repository
