chore(setting) 권한 수정

--- a/.github/workflows/auto-review-reminder.yml
+++ b/.github/workflows/auto-review-reminder.yml
@@ -14,7 +14,8 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
-      repository-projects: read
+      actions: read
+      checks: read
 
     steps:
       - name: Checkout repository
@@ -26,7 +27,7 @@ jobs:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
           DISCORD_MENTION: ${{ secrets.DISCORD_MENTION }}
         with:
-          github-token: ${{ secrets.EXPANDED_GITHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const script = require('.github/scripts/auto-review-reminder.cjs');
             await script({ github, context, core });
