chore(setting) 적용 브랜치명 변경

--- a/.github/workflows/auto-review-reminder.yml
+++ b/.github/workflows/auto-review-reminder.yml
@@ -3,7 +3,7 @@ name: Review Reminder for Discord
 on:
   pull_request:
     branches:
-      - develop
+      - main
   schedule:
     - cron: "*/5 * * * *" # 매 5분마다
   workflow_dispatch:
