--- a/.github/workflows/auto-assign-pr.yml
+++ b/.github/workflows/auto-assign-pr.yml
@@ -2,10 +2,10 @@ name: PR Review Management
 
 on:
   pull_request:
-    types: [opened, reopened, synchronize]
+    types: [opened, reopened, synchronize, ready_for_review]
     branches: ["*"]
   schedule:
-    - cron: "*/5 * * * *" # 매 5분마다
+    - cron: "0 12 * * *" # 매 5분마다
   workflow_dispatch:
 
 jobs:
@@ -23,9 +23,16 @@ jobs:
 
       - name: Run assign reviewers script
         uses: actions/github-script@v7
-        if: github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'reopened')
+        if: github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'reopened' || github.event.action == 'ready_for_review')
         env:
+          # {
+          #   "jinSJUser": "cozy-ito"
+          # }
           COLLABORATORS: ${{ secrets.COLLABORATORS }}
+          # {
+          #   "id": "345674...",
+          #   "displayName": "이토"
+          # }[]
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
           DISCORD_MENTION: ${{ secrets.DISCORD_MENTION }}
         with:
