chore(setting) 리뷰 관련 알람 워크플로우 name 변경

--- a/.github/workflows/auto-review-alarm.yml
+++ b/.github/workflows/auto-review-alarm.yml
@@ -1,4 +1,4 @@
-name: Auto Assign Reviwer/Assignee and Send Discord Reminder
+name: Auto Send Discord Review Reminder
 
 on:
   pull_request_review:
