--- a/.github/workflows/auto-assign-pr.yml
+++ b/.github/workflows/auto-assign-pr.yml
@@ -1,9 +1,6 @@
-name: Auto Assign Reviwer/Assignee and Send Discord Reminder
+name: Sechduling Send Discord Reminder
 
 on:
-  pull_request:
-    types: [opened, reopened, synchronize, ready_for_review]
-    branches: ["*"]
   schedule:
     - cron: "0 17 * * *" # 매일 오후 5시
   workflow_dispatch:
@@ -20,20 +17,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Run assign reviewers script
-        uses: actions/github-script@v7
-        if: github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'reopened' || github.event.action == 'ready_for_review')
-        env:
-          # {
-          #   "jinSJUser": "cozy-ito"
-          # }
-          COLLABORATORS: ${{ secrets.COLLABORATORS }}
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const script = require('.github/scripts/assign-reviewer.cjs');
-            await script({ github, context, core });
 
       - name: Send Reminder to Discord
         uses: actions/github-script@v7
