--- a/.github/workflows/auto-pr-alarm.yml
+++ b/.github/workflows/auto-pr-alarm.yml
@@ -11,13 +11,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  pr-management:
+  auto_assigning:
     runs-on: ubuntu-latest
     permissions:
       contents: read
       pull-requests: write
-      actions: read
-      checks: read
 
     steps:
       - name: Checkout repository
@@ -33,6 +31,16 @@ jobs:
           script: |
             const script = require('.github/scripts/assign-reviewer.cjs');
             await script({ github, context, core });
+
+  send-pr-alarm:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Send PR Alarm to Discord
         uses: actions/github-script@v7
