--- a/.github/workflows/auto-review-alarm.yml
+++ b/.github/workflows/auto-review-alarm.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  pr-management:
+  send-review-alarm:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Send Reminder to Discord
+      - name: Send Review Alarm to Discord
         uses: actions/github-script@v7
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
