--- a/.github/workflows/auto-pr-alarm.yml
+++ b/.github/workflows/auto-pr-alarm.yml
@@ -10,16 +10,22 @@ on:
     branches: ["*"]
   workflow_dispatch:
 
+# 워크플로우 전체에서 사용할 기본 권한 설정
+permissions:
+  contents: read
+
 jobs:
   auto_assigning:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
-      pull-requests: write
+      pull-requests: write # 리뷰어 할당을 위한 최소 쓰기 권한
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+          persist-credentials: false
 
       - name: Run assign reviewers script
         uses: actions/github-script@v7
@@ -33,14 +39,17 @@ jobs:
             await script({ github, context, core });
 
   send-pr-alarm:
+    needs: auto_assigning
     runs-on: ubuntu-latest
     permissions:
-      contents: read
-      pull-requests: write
+      pull-requests: read # PR 정보 읽기 위한 최소 권한
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+          persist-credentials: false
 
       - name: Send PR Alarm to Discord
         uses: actions/github-script@v7
@@ -52,3 +61,13 @@ jobs:
           script: |
             const script = require('.github/scripts/auto-pr-alarm.cjs');
             await script({ github, context, core });
+
+# 워크플로우 실행 중 리소스 제한
+defaults:
+  run:
+    shell: bash
+    working-directory: .
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
