--- a/.github/workflows/auto-pr-alarm.yml
+++ b/.github/workflows/auto-pr-alarm.yml
@@ -10,24 +10,21 @@ on:
     branches: ["*"]
   workflow_dispatch:
 
-# 워크플로우 전체에서 사용할 기본 권한 설정
-permissions:
-  contents: read
-
 jobs:
   auto_assigning:
     runs-on: ubuntu-latest
     permissions:
-      pull-requests: write # 리뷰어 할당을 위한 최소 쓰기 권한
+      contents: read
+      pull-requests: write
+    outputs:
+      assigned_reviewers: ${{ steps.assign-reviewers.outputs.reviewers }}
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
-          persist-credentials: false
 
       - name: Run assign reviewers script
+        id: assign-reviewers
         uses: actions/github-script@v7
         if: github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'reopened' || github.event.action == 'ready_for_review')
         env:
@@ -36,64 +33,34 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const script = require('.github/scripts/assign-reviewer.cjs');
-            await script({ github, context, core });
+            const reviewersInfo = await script({ github, context, core });
+
+            // 다음 job에서 사용할 수 있도록 output 설정
+            if (reviewersInfo?.reviewers) {
+              core.setOutput('reviewers', JSON.stringify(reviewersInfo.reviewers));
+            } else {
+              core.setOutput('reviewers', '[]');
+            }
 
   send-pr-alarm:
-    needs: auto_assigning
     runs-on: ubuntu-latest
+    needs: auto_assigning
     permissions:
-      pull-requests: read # PR 정보 읽기 위한 최소 권한
+      contents: read
+      pull-requests: write
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
-          persist-credentials: false
-
-      - name: Get PR Details
-        id: get_pr_details
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const { data: pullRequest } = await github.rest.pulls.get({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              pull_number: context.payload.pull_request.number
-            });
-
-            core.setOutput('pr_details', JSON.stringify(pullRequest));
 
       - name: Send PR Alarm to Discord
         uses: actions/github-script@v7
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
           DISCORD_MENTION: ${{ secrets.DISCORD_MENTION }}
-          PR_DETAILS: ${{ steps.get_pr_details.outputs.pr_details }}
+          ASSIGNED_REVIEWERS: ${{ needs.auto_assigning.outputs.assigned_reviewers }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const prDetails = JSON.parse(process.env.PR_DETAILS);
             const script = require('.github/scripts/auto-pr-alarm.cjs');
-            await script({ 
-              github, 
-              context: {
-                ...context,
-                payload: {
-                  ...context.payload,
-                  pull_request: prDetails
-                }
-              }, 
-              core 
-            });
-
-# 워크플로우 실행 중 리소스 제한
-defaults:
-  run:
-    shell: bash
-    working-directory: .
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+            await script({ github, context, core });
